Various front end fixes (#1078)
- Fix decks not using name you enter when being imported
- Fix imported decks dropdown being too long
- Fix imported decks warning message not resetting after re-opening the
window
- Fix imported decks import button being activated, even when the deck
wasn't valid, for deck codes with a length of 7.
- Fix tag filter dropdown opening downwards instead of upwards
- Fix icons in dropdown buttons not being centered
- Improve design of checkboxes, along with fixing centering on some
devices.
- Fix the Emoji button in chat window not having Bdub's head centered

---------

--- a/client/src/app/deck/deck.module.scss
+++ b/client/src/app/deck/deck.module.scss
@@ -216,6 +216,9 @@
 
 .dropdownButton {
 	place-content: center;
+	display: flex;
+	align-items: center;
+	justify-items: center;
 	background-color: var(--gray-500);
 	border-radius: 6px;
 	width: 2rem;
